<resources>
    <string name="app_name">Calorie Base</string>
    <string name="calorie_base">Calorie Base</string>
    <string name="add_food">Add Food</string>
    <string name="add_water">Add Water</string>
    <string name="add_burnt_calories">Add burnt calories</string>
    <string name="excersise">Excersise</string>
    <string name="count_you_bmi">Count you BMI</string>
    <string name="give_us_you_age">Give us you age:</string>
    <string name="bmi_counter">BMI Counter:</string>
    <string name="your_age">Your age:</string>
    <string name="type_here">Type here…</string>
    <string name="type_here_1">Type here…</string>
    <string name="current_weight">Current weight:</string>
    <string name="type_here_2">Type here…</string>
    <string name="your_resoult">Your resoult:</string>
    <string name="count_my_resoult">Count my resoult</string>
    <string name="calorie_counter">Calorie Counter:</string>
    <string name="count_your_calorie_requirement">Count your calorie requirement</string>
    <string name="gramm">gramm…</string>
    <string name="add_your_food_for_the_day">Add your food for the day:</string>
    <string name="count">Count</string>
    <string name="food_tab">Food Tab.</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="carbs_gramm">Carbs (gramm)</string>
    <string name="fats_gramm">Fats (gramm)</string>
    <string name="protein_gramm">Protein (gramm)</string>
    <string name="your_daily_calorie_intake">Your daily calorie intake:</string>
    <string name="calories_left">Calories Left:</string>
    <string name="your_name">Your name:</string>
    <string name="profiles">Profiles:</string>
    <string name="your_profiles">Your profiles:</string>
    <string name="select_your_prfiles">Select your prfiles</string>
    <string name="your_height">Your Height:</string>
    <string name="your_name2">Your name:</string>
    <string name="profiles2">Profiles:</string>
    <string name="your_result2">Your Result:</string>
    <string name="current_weight2">Current Weight:</string>
    <string name="here_you_can_add_your_daily_exercise">Here you can add your daily exercise:</string>
    <string name="calories">Calories…</string>
    <string name="menu">Menu</string>
    <string name="current_total_calories_burnt">Current Total Calories Burnt:</string>
    <string name="carbs">Carbs.:</string>
    <string name="protein">Protein:</string>
    <string name="fats">Fats:</string>
    <string name="protein2">Protein (%):</string>
    <string name="carbs2">Carbs (%)</string>
    <string name="percent">%</string>
    <string name="percent2">%</string>
    <string name="percent3">%</string>
    <string name="fats2">Fats (%):</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="daily_water_intake_should_be">Daily Water Intake Should Be:</string>
    <string name="current_total_water_intake">Current Total Water Intake:</string>
    <string name="dl">dl…</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="your_calorie_goal">Your Calorie Goal:</string>
    <string name="calorie_goals">Calorie goals:</string>
</resources>